Added github link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Carol Morris - open sorced on GitHub
+      This project was coded by Carol Morris -
+      <a href="https://github.com/cardycode/world-clock-app"
+        >open sourced on GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
