--- a/index.html
+++ b/index.html
@@ -10,11 +10,31 @@
       rel="stylesheet"
       href="css/style.css"
     />
+    <script
+      src="https://kit.fontawesome.com/52721a5a1a.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <title>World Clock</title>
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>
+        <i class="fa-solid fa-earth-europe"></i> World Clock
+        <i class="fa-regular fa-clock"></i>
+      </h1>
       <select
         name=""
         id=""
@@ -30,8 +50,10 @@
           class="city"
           id="berlin"
         >
-          <h2>Berlin</h2>
-          <div class="date">September 23rd, 2023</div>
+          <div>
+            <h2>Berlin</h2>
+            <div class="date">September 23rd, 2023</div>
+          </div>
           <div class="time">3:51:57 PM</div>
         </div>
 
@@ -39,8 +61,10 @@
           class="city"
           id="sydney"
         >
-          <h2>Sydney</h2>
-          <div class="date">September 23rd, 2023</div>
+          <div>
+            <h2>Sydney</h2>
+            <div class="date">September 23rd, 2023</div>
+          </div>
           <div class="time">3:51:57 PM</div>
         </div>
 
@@ -48,21 +72,23 @@
           class="city"
           id="vancouver"
         >
-          <h2>Vancouver</h2>
-          <div class="date">September 23rd, 2023</div>
+          <div>
+            <h2>Vancouver</h2>
+            <div class="date">September 23rd, 2023</div>
+          </div>
           <div class="time">3:51:57 PM</div>
         </div>
       </div>
-
-      <footer>
-        This project was coded by Carol Morris -
-        <a
-          href="https://github.com/cardycode/world-clock-app"
-          target="_blank"
-          >open sourced on GitHub</a
-        >
-      </footer>
     </div>
+    <footer>
+      This project was coded by Carol Morris -
+      <a
+        href="https://github.com/cardycode/world-clock-app"
+        target="_blank"
+        >open sourced on GitHub <i class="fa-brands fa-square-github"></i
+      ></a>
+    </footer>
+
     <script src="javascript/index.js"></script>
   </body>
 </html>
