--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>Berlin</h2>
             <div class="date">September 23rd, 2023</div>
           </div>
-          <div class="time">3:51:57 PM</div>
+          <div class="time">3:51:57 <span class="APM">PM</span></div>
         </div>
 
         <div
@@ -65,7 +65,7 @@
             <h2>Sydney</h2>
             <div class="date">September 23rd, 2023</div>
           </div>
-          <div class="time">3:51:57 PM</div>
+          <div class="time">3:51:57 <span class="APM">PM</span></div>
         </div>
 
         <div
@@ -76,7 +76,7 @@
             <h2>Vancouver</h2>
             <div class="date">September 23rd, 2023</div>
           </div>
-          <div class="time">3:51:57 PM</div>
+          <div class="time">3:51:57 <span class="APM">PM</span></div>
         </div>
       </div>
     </div>
