--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
       href="css/style.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <script
       src="https://kit.fontawesome.com/52721a5a1a.js"
       crossorigin="anonymous"
