--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       </h1>
       <select
         name=""
-        id=""
+        id="citySelect"
       >
         <option value="">Select City...</option>
-        <option value="berlin">Berlin</option>
-        <option value="sydney">Sydney</option>
-        <option value="vancouver">Vancouver</option>
+        <option value="Europe/Berlin">Berlin</option>
+        <option value="Australia/Sydney">Sydney</option>
+        <option value="America/Vancouver">Vancouver</option>
       </select>
 
       <div class="cities">
