updated link back to index.html

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         >
           <div>
             <h2>Berlin</h2>
-            <div class="date">September 23rd, 2023</div>
+            <div class="date"></div>
           </div>
-          <div class="time">3:51:57 <span class="APM">PM</span></div>
+          <div class="time"></div>
         </div>
 
         <div
@@ -65,9 +65,9 @@
         >
           <div>
             <h2>Sydney</h2>
-            <div class="date">September 23rd, 2023</div>
+            <div class="date"></div>
           </div>
-          <div class="time">3:51:57 <span class="APM">PM</span></div>
+          <div class="time"></div>
         </div>
 
         <div
@@ -76,9 +76,9 @@
         >
           <div>
             <h2>Vancouver</h2>
-            <div class="date">September 23rd, 2023</div>
+            <div class="date">3</div>
           </div>
-          <div class="time">3:51:57 <span class="APM">PM</span></div>
+          <div class="time"></div>
         </div>
       </div>
     </div>
