--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
         id="citySelect"
       >
         <option value="">Select City...</option>
-        <option value="Europe/Berlin">Berlin</option>
-        <option value="Australia/Sydney">Sydney</option>
+        <option value="current">My location</option>
         <option value="America/Vancouver">Vancouver</option>
+        <option value="America/Sao_Paulo">Sao Paulo</option>
+        <option value="Europe/Berlin">Berlin</option>
+        <option value="Europe/Athens">Athens</option>
+        <option value="Asia/Bangkok">Bangkok</option>
+        <option value="Australia/Sydney">Sydney</option>
       </select>
 
       <div class="cities">
