Updated 1st timezone to current location

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <div class="cities">
         <div
           class="city"
-          id="berlin"
+          id="current"
         >
           <div>
-            <h2>Berlin</h2>
+            <h2 class="current-h2"></h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
